test from Amadu

--- a/frontend/src/styles/ui/_footer.scss
+++ b/frontend/src/styles/ui/_footer.scss
@@ -57,7 +57,7 @@
 		}
 
 		&--fb {
-			@include svg(100%, 100%, 'icon_soc-fb');
+			@include svg(100%, 100%, 'captain');
 
 			&:hover {
 				 @include svg-fill(100%, 100%, 'icon_soc-fb', $pomegranate);
