--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -1,6 +1,26 @@
 // @import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i&subset=cyrillic-ext,latin-ext');
 
 @font-face {
+    font-family: 'Roboto';
+    src: url('/local/templates/z-template/static/fonts/Roboto/Roboto-Regular.eot');
+    src: url('/local/templates/z-template/static/fonts/Roboto/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+         url('/local/templates/z-template/static/fonts/Roboto/Roboto-Regular.woff') format('woff'),
+         url('/local/templates/z-template/static/fonts/Roboto/Roboto-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/local/templates/z-template/static/fonts/Roboto/Roboto-Bold.eot');
+    src: url('/local/templates/z-template/static/fonts/Roboto/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+         url('/local/templates/z-template/static/fonts/Roboto/Roboto-Bold.woff') format('woff'),
+         url('/local/templates/z-template/static/fonts/Roboto/Roboto-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
 	font-family: 'FranklinGothic';
     src: url('/local/templates/z-template/static/fonts/FranklinGothicMediumITC-Regular.eot');
     src: url('/local/templates/z-template/static/fonts/FranklinGothicMediumITC-Regular.eot?#iefix') format('embedded-opentype'),
@@ -50,7 +70,7 @@ html {
 
 %text--body,
 .text--body {
-	font-family: 'Humanist531CBT', Helvetica, sans-serif;
+	font-family: 'Roboto', Helvetica, sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	@include font-size($base-font-size);
@@ -77,7 +97,7 @@ ul ul, ol ol, ul ol, ol ul {
 
 h1, h2, h3, h4, h5, h6 {
 	// @include rem(margin-bottom, $base-font-size/2);
-	font-family: 'FranklinGothic', Helvetica, sans-serif;
+	font-family: 'Roboto', Helvetica, sans-serif;
 	font-weight: 500;
 	line-height: normal;
 	color: inherit;
@@ -95,7 +115,7 @@ h1 {
 .header-2 {
 	@include font-size(24px);
 	font-weight: 600;
-	font-family: 'Humanist531CBT', Helvetica, sans-serif;
+	font-family: 'Roboto', Helvetica, sans-serif;
 	text-transform: uppercase;
 	margin-bottom: 1.5rem;
 }
@@ -138,7 +158,7 @@ h6 {
 	font-weight: 600;
 	color: $base-text-color;
 	border-bottom: 2px solid $base-text-color;
-	
+
 	.caption__units {
 		font-weight: normal;
 	}
@@ -163,7 +183,7 @@ pre.xdebug-var-dump {
 	html {
 		font-size: 14px;
 	}
-	
+
 	%text--body,
 	.text--body {
 		font-size: 1.0715rem;
@@ -178,12 +198,12 @@ pre.xdebug-var-dump {
 	.lead {
 		font-size: 1.125rem;
 	}
-	
+
 	.header-1 {
 		@include font-size(34px);
 		line-height: 42px;
 	}
-	
+
 	.header-3 {
 		@include font-size(18px);
 	}
