--- a/frontend/src/styles/ui/_header.scss
+++ b/frontend/src/styles/ui/_header.scss
@@ -40,7 +40,7 @@
     &-link {
         text-decoration: none;
         color: $oslo-gray;
-        font-family: 'FranklinGothic', Helvetica, sans-serif;
+        font-family: 'Roboto', Helvetica, sans-serif;
 
         &:hover {
             color: $pomegranate;
@@ -122,7 +122,7 @@
     text-transform: uppercase;
     text-decoration: none;
     color: $oslo-gray;
-    font-family: 'FranklinGothic';
+    font-family: 'Roboto';
     display: block;
     width: 100%;
     height: 100%;
@@ -146,7 +146,7 @@
 
 @include breakpoint(desktop) {
     .logo {
-        
+
         &__img {
             display: block;
             max-width: 9.375rem;
